syntax = "proto2";

package protos.soc;

enum Resource {
    BRICK = 1;
    ORE = 2;
    SHEEP = 3;
    WHEAT = 4;
    WOOD = 5;
}

enum DevelopmentCard {
    KNIGHT = 1;
    YEAR_OF_PLENTY = 2;
    MONOPOLY = 3;
    ROAD_BUILDER = 4;
    POINT = 5;
}

message ResourceSet {
    repeated Resource resource_cards = 1;
}

message DevelopmentCardSet {
    repeated DevelopmentCard development_cards = 1;
}

message ProbableResourceSet {
    message ProbableCardValue {
        required Resource res_type = 1;
        required int32 known_amount = 2;
        required double unknown_amount = 3;
    }
    repeated ProbableCardValue probable_resource_cards = 1;
}

message PossibleHands {

    message HandCombination {
        message HandsWithMultiplier {
            required ResourceSet cards = 1;
            required int32 multiplier = 2;
        }
        map<int32, HandsWithMultiplier> hand = 1;
    }
    repeated HandCombination hands = 1;
}

message PublicInventory {
    required int32 num_cards = 1;
    required int32 num_development_cards = 2;
    required DevelopmentCardSet played_dev_cards = 3;
}

message PerfectInventory {
    required ResourceSet resource_cards = 1;
    required DevelopmentCardSet played_dev_cards = 2;
    required DevelopmentCardSet can_play_dev_cards = 3;
    required DevelopmentCardSet cannot_play_dev_cards = 4;
}

message ProbableInventory {
    required ProbableResourceSet probable_resource_cards = 1;
    required DevelopmentCardSet played_dev_cards = 2;
    //TODO Add ProbableDevelopment cards
}




